<resources>
    <string name="app_name">化工园区状态监测</string>
    <string name="login_username_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_type_park_mnt">园区管理员</string>
    <string name="login_type_system_mnt">系统管理员</string>
    <string name="login">登录</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_register">注册账号</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="register_phone_tip">手机号</string>
    <string name="register_code_tv">发送手机验证码</string>
    <string name="register_password_tip">密码</string>
    <string name="register_title">注册</string>
    <string name="register_confirm_password_tip">确认密码</string>
    <string name="register_nick_tip">昵称</string>
    <string name="register_bt">  注册  </string>
    <string name="register_confirm_code_tip">验证码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="register_company_code_tip">企业编号</string>
    <string name="register_company_hash_tip">企业哈希</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="forget_password_password_tip">新密码</string>
    <string name="forget_password_confirm_password_tip">确认密码</string>
    <string name="forget_password_confirm_code_tip">验证码</string>
    <string name="forget_password_bt">确定</string>
    <string name="system_index">首页</string>
    <string name="system_park">园区</string>
    <string name="system_mine">我的</string>
    <string name="system_index_title_tv">选择园区</string>
    <string name="system_park_name">园区名字</string>
    <string name="system_index_clear_all">清除所有点</string>
    <string name="system_index_clear_last">清除上一个</string>
    <string name="system_index_enclosed">封闭图形</string>
    <string name="system_index_add_park">添加园区</string>
    <string name="system_park_contact">园区联系人</string>
    <string name="system_park_contact_phone">联系人电话</string>
    <string name="system_park_address">园区地址</string>
    <string name="system_park_list_master">主管</string>
    <string name="system_park_list_edit">编辑</string>
    <string name="system_park_list_delete">删除</string>
    <string name="system_park_title">园区列表</string>
    <string name="system_master_title">园区主管管理</string>
    <string name="system_master_ok">确定</string>
    <string name="mine_title">个人信息</string>
    <string name="mine_confirm">确定</string>
    <string name="mine_phone_tip">手机号</string>
    <string name="mine_nick_tip">昵称</string>
    <string name="mine_age_tip">年龄</string>
    <string name="mine_card_tip">身份证号</string>
    <string name="mine_enterprise_tip">所属企业</string>
    <string name="mine_address_tip">个人住址</string>
    <string name="park_info">园区信息</string>
    <string name="park_point">监测点</string>
    <string name="park_info_title">园区信息</string>
    <string name="park_info_confirm">确定修改</string>
    <string name="park_info_name_tip">园区名称</string>
    <string name="park_info_contact_tip">联系人</string>
    <string name="park_info_contact_phone_tip">联系方式</string>
    <string name="park_info_area_tip">园区面积</string>
    <string name="park_info_create_tip">创建时间</string>
    <string name="sensor_title">监测点</string>
    <string name="sensor_type">类型管理</string>
    <string name="sensor_confirm">确认修改</string>
    <string name="sensor_manage_title">监测点类型管理</string>
    <string name="sensor_manage_save">保存</string>
    <string name="sensor_manage_type_add">添加</string>
    <string name="sensor_manage_type_name">请输入监测点类型名称</string>
    <string name="sensor_manage_item_delete">删除</string>
    <string name="park_index_look">查看状态</string>
</resources>
