<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bcbcbc">

    <RelativeLayout
        android:id="@+id/sensor_title_all"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#48a0e9">

        <TextView
            android:id="@+id/sensor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/sensor_title"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="30sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/sensor_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/sensor_bt_all"
        android:layout_below="@id/sensor_title_all"
        android:orientation="vertical">
    </ListView>

    <RelativeLayout
        android:id="@+id/sensor_bt_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFF">

        <TextView
            android:id="@+id/sensor_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/corners_bg_blue"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/sensor_type"
            android:textSize="23sp" />
        <TextView
            android:id="@+id/sensor_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg_blue"
            android:layout_alignParentEnd="true"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/sensor_confirm"
            android:textSize="23sp" />
    </RelativeLayout>
</RelativeLayout>