<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/sensor_manage_title_all"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#48a0e9">

        <ImageButton
            android:id="@+id/sensor_manage_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/sensor_manage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/sensor_manage_title"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="30sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/sensor_manage_type_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sensor_manage_title_all"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sensor_manage_type_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginStart="3dp"
            android:layout_weight="8"
            android:hint="@string/sensor_manage_type_name"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColorHint="#706e6e" />

        <TextView
            android:id="@+id/sensor_manage_type_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="2"
            android:background="@drawable/corners_bg_blue"
            android:text="@string/sensor_manage_type_add"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="30sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/sensor_manage_lv"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="match_parent"
        android:layout_above="@id/sensor_manage_all"
        android:layout_below="@id/sensor_manage_type_all"
        android:background="#a87e7c7c" />

    <RelativeLayout
        android:id="@+id/sensor_manage_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFF"
        android:gravity="end">

        <TextView
            android:id="@+id/sensor_manage_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corners_bg_blue"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/sensor_manage_save"
            android:textSize="23sp" />
    </RelativeLayout>

</RelativeLayout>