<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ece6e6">

    <RelativeLayout
        android:id="@+id/register_title_all"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#48a0e9">

        <ImageButton
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="30sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/register_sv"
        android:layout_below="@id/register_title_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/register_all"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/corners_bg_white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/register_phone_tip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:text="@string/register_phone_tip"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/register_phone_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/register_code_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_code_tv"
                    android:textAlignment="textEnd"
                    android:textColor="#151212" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_bg_white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/register_nick_tip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:text="@string/register_nick_tip"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/register_nick_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_bg_white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/register_password_tip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:text="@string/register_password_tip"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/register_password_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_bg_white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/register_confirm_password_tip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:text="@string/register_confirm_password_tip"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/register_confirm_password_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="#000" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/register_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/register_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textColor="#000" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_bg_white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/register_company_code_tip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLines="1"
                    android:text="@string/register_company_code_tip"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/register_company_code_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="#000" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/register_type_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/register_park"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/login_type_park_mnt"
                    android:textColor="#000" />

                <RadioButton
                    android:id="@+id/register_manager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_type_system_mnt"
                    android:textColor="#000" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/register_company_hash_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_bg_white"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/register_company_hash_tip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:text="@string/register_company_hash_tip"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/register_company_hash_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="#000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_bg_white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/register_confirm_code_tip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:text="@string/register_confirm_code_tip"
                    android:textAlignment="center"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/register_confirm_code_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:textColor="#000" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:labelFor="@id/register_sv"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/register_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/corners_bg_blue"
            android:text="@string/register_bt"
            android:textColor="#000" />
    </RelativeLayout>

</RelativeLayout>